feat: add translation keys for editor app

--- a/apps/editor/translations/en.json
+++ b/apps/editor/translations/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "title": "English to Pidgin Translator",
-    "description": "Translate between English and Pidgin language"
+    "title": "Naija Spell Checker",
+    "description": "Check your text for spelling and grammar errors"
   },
   "languages": {
     "en": "English",
@@ -18,6 +18,43 @@
       "source": "Enter text to translate",
       "target": "Translation will appear here"
     }
+  },
+  "editor": {
+    "placeholder": "Type or paste your text here",
+    "sample_content": "Sample content"
+  },
+  "suggestions": {
+    "title": "Suggestions",
+    "empty": "You are all good here!",
+    "fix": "Fix",
+    "fix_all": "Fix all",
+    "fixing": "Fixing...",
+    "fix_whitespace": "Fix whitespace",
+    "ignore_rule": "Ignore rule",
+    "ignore_category": "Ignore category"
+  },
+  "preferences": {
+    "title": "Preferences",
+    "api": "API",
+    "rules": "Rules",
+    "categories": "Categories",
+    "settings_saved": "Settings saved!",
+    "custom_api_endpoint": "Custom Spellcheck API endpoint",
+    "save": "Save",
+    "reset": "Reset",
+    "ignored_rules": "Ignored Rules",
+    "ignored_categories": "Ignored Categories",
+    "clear_all": "Clear all",
+    "no_ignored_rules": "You don't have any ignored rules",
+    "no_ignored_categories": "You don't have any ignored categories"
+  },
+  "install": {
+    "title": "Install Naija Spell Checker",
+    "description": "Install the app on your device to easily access it anytime. No app store. No download. No hassle.",
+    "tap_share": "Tap on the share button",
+    "select_add": "Select Add to Home Screen",
+    "install": "Install",
+    "close": "Close"
   },
   "verification": {
     "full": "Verified Translation",
